--- a/styles/style.css
+++ b/styles/style.css
@@ -16,4 +16,9 @@ nav{
 }
 .nav-description{
     color: #444343;
+    /* padding: 20px 0 0; */
+    padding-left: 680px;
+    font-weight: 400;
+    font-size: 16px;
+    font-family: 'Work Sans', sans-serif;
 }
