--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,29 @@ nav{
     font-weight: 600;
     font-size: 17px;
 }
-/* main :step2.. */
+/* main-teg-decoration:--step2.. */
+
 .main{
+    padding-left: 700px;
+    width: 416px;
+    height: 400px;
+    margin-top: -380px;
+    margin-left: 125px;
+}
+.person{
+    margin: 131px 0 0 150px ;
+}
+.h-title{
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+}
+.title-description{
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    padding-top: 10px;
+}
+.sub-title{
 
 }
