--- a/styles/style.css
+++ b/styles/style.css
@@ -62,5 +62,7 @@ nav{
     padding-top: 10px;
 }
 .sub-title{
-    
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
 }
