--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,22 @@
 /* header.... */
 nav{
-    background-image: url('../images/banner/banner1.png');
+    background-image:  url('../images/banner/banner1.png');
+    
     background-repeat: no-repeat;
     width: 1200px;
     height: 808px;
     text-align: right;
+    /* padding-right: 400px; */
     padding-right: 230px;
+    padding-top: 130px;
 }
 
 /* h1-decoration. */
 .nav-title{
     font-weight: 700;
     font-size: 65px;
-    padding: 216px 0  0;
+    /* padding: 216px 0  0; */
+    padding: 80px 0 0;
     padding-left: 600px;
     font-family: 'Work Sans', sans-serif;
 }
@@ -101,7 +105,7 @@ nav{
 }
 /* section.... */
 .section{
-    background-image: url('../images/watch.png');
+    background: linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0) 100%), url('../images/watch.png');
     background-repeat: no-repeat;
     width: 1140px;
     height: 300px;
